# hivesight-calibration

./: .gitignore  README.md  pyproject.toml
data/: .gitkeep
docs/: _config.yml  _toc.yml  background.md  conclusion.md  data_flywheel.md  intro.md  methodology.md  references.bib  results.md
docs/notebooks/: 01_data_exploration.ipynb  02_baseline_calibration.ipynb  03_model_comparison.ipynb
results/: baseline_cappun_gpt-4o-mini_20251208_135248.csv  baseline_cappun_gpt-4o-mini_20251208_135248.json  baseline_enhanced_cappun_gpt-5-mini_20251208_141407.csv  baseline_enhanced_cappun_gpt-5-mini_20251208_141407.json  baseline_enhanced_cappun_gpt-5-mini_20251208_142141.csv  baseline_enhanced_cappun_gpt-5-mini_20251208_142141.json  baseline_enhanced_cappun_gpt-5_20251208_145306.csv  baseline_enhanced_cappun_gpt-5_20251208_145306.json  multi_question_gpt-4o-mini_20251208_140031.json
scripts/: analyze_bias.py  run_baseline.py  run_baseline_enhanced.py  run_calibration.py  run_multi_question.py
src/hivesight_calibration/: __init__.py  calibration.py  data.py  llm.py  persona.py
tests/: __init__.py  test_calibration.py  test_data.py  test_llm.py  test_persona.py
